<resources>
    <string name="app_name">PlaNN</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="event">Event</string>
    <string name="eventTime">%s - %s</string>
    <string name="DayFormat">%i/%i/%i</string>
    <string name="select">Select Date</string>
    <string name="save_event">Save</string>
    <string name="create_event">Create Event</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="duration">duration</string>
    <string name="select_time">Select Time</string>
    <string-array name="eventType">
        <item>One time</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>