<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TimePicker
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/time_picker"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/time_picker"
        app:layout_constraintStart_toStartOf="parent"
        android:checkedButton="@id/hours"
        android:id="@+id/radio_group"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hours"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/hours"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/minutes"
            android:text="@string/minutes"
            android:layout_margin="@dimen/margin_normal"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/duration_edit"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        android:hint="@string/duration"
        android:inputType="number|numberDecimal"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_edit"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/save_event"
        android:id="@+id/save_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>