<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.glasscar46.plann.EventViewModel" />
        <variable
            name="secondFragment"
            type="com.glasscar46.plann.SecondFragment" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:text="@string/create_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/input_text_field"
       android:hint="@string/event"
       android:layout_marginTop="@dimen/margin_normal"
       app:errorIconDrawable="@drawable/ic_error_24"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
       app:layout_constraintTop_toBottomOf="@+id/textview_second">
       <com.google.android.material.textfield.TextInputEditText
           android:layout_width="match_parent"
           android:id="@+id/editText"
           android:textAlignment="center"
           android:maxLines="1"
           android:inputType="textNoSuggestions|textPersonName"
           android:maxLength="12"
           android:layout_height="match_parent"/>
   </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/date_select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.eventDay}"
        android:textSize="12sp"
        android:onClick="@{()->secondFragment.showDateDialog()}"
        android:layout_margin="@dimen/margin_normal"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text_field" />
    <Button
        android:id="@+id/duration_select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/select_time"
        android:onClick="@{()->secondFragment.showTimeDialog()}"
        android:textSize="12sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toEndOf="@id/date_select_button"
        app:layout_constraintTop_toBottomOf="@id/input_text_field" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:padding="5dp"
        android:id="@+id/spinner"
        android:entries="@array/eventType"
        app:layout_constraintTop_toBottomOf="@+id/date_select_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:layout_marginTop="@dimen/margin_normal"
        android:onClick="@{()->secondFragment.saveEvent()}"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textStyle="bold"
        android:text="@string/save_event"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>